--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@
             }
             
             /* Logo na impressão */
-            .print-logo {
-                position: absolute;
-                top: 10px;
-                left: 10px;
-                height: 40px;
-            }
-        }
+            /* Logo na impressão */
+.print-logo {
+    display: block;
+    margin: 0 auto 8px auto;
+    height: 40px;
+    text-align: center;
+}
     </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
