--- a/index.html
+++ b/index.html
@@ -94,17 +94,29 @@
                 font-size: 10pt !important;
             }
             
-            .print-title {
-                background: linear-gradient(135deg, #1e40af, #3b82f6) !important;
-                color: white !important;
-                font-weight: bold !important;
-                font-size: 14pt !important;
-                text-align: center !important;
-                padding: 10px !important;
-                border: 2px solid #1e3a8a !important;
-                margin-bottom: 8px !important;
-                border-radius: 4px !important;
-            }
+            .print-title-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(135deg, #1e40af, #3b82f6) !important;
+    color: white !important;
+    font-weight: bold !important;
+    font-size: 14pt !important;
+    padding: 10px !important;
+    border: 2px solid #1e3a8a !important;
+    margin-bottom: 8px !important;
+    border-radius: 4px !important;
+    gap: 15px;
+}
+
+.print-title {
+    margin: 0 !important;
+}
+
+/* Logo na impressão */
+.print-logo {
+    height: 35px;
+}
             
             .month-year-reference {
                 background: #f8fafc !important;
@@ -294,11 +306,13 @@
         </div>
     </div>
 
-    <!-- View de Impressão (oculta normalmente) -->
+       <!-- View de Impressão (oculta normalmente) -->
     <div id="print-view" class="hidden">
-        <!-- Logo na impressão -->
-        <img src="https://i.postimg.cc/NF8psJ8b/adca.png" alt="Logo" class="print-logo">
-        <div class="print-title">ESCALA DE CULTOS ADCA - CAPOEIRA GRANDE</div>
+        <!-- Logo e Título -->
+        <div class="print-title-container">
+            <img src="https://i.postimg.cc/NF8psJ8b/adca.png" alt="Logo" class="print-logo">
+            <div class="print-title">ESCALA DE CULTOS ADCA - CAPOEIRA GRANDE</div>
+        </div>
         <div id="month-year-reference" class="month-year-reference"></div>
         <table id="print-table" class="w-full">
             <tbody id="print-body"></tbody>
