--- a/index.html
+++ b/index.html
@@ -94,10 +94,9 @@
                 font-size: 10pt !important;
             }
             
-          .print-title-container {
+         .print-title-container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     background: linear-gradient(135deg, #1e40af, #3b82f6) !important;
     color: white !important;
     font-weight: bold !important;
@@ -114,12 +113,15 @@
     left: 50%;
     transform: translateX(-50%);
     margin: 0 !important;
+    white-space: nowrap;
 }
 
 /* Logo na impressão */
 .print-logo {
     height: 35px;
     margin-left: 20px;
+    position: relative;
+    z-index: 1;
 }
             
             .month-year-reference {
